<resources>
    <string name="app_name">Tracker</string>

    <string name="slogan_welcome">Пожалуй лучший фитнес трекер в ДВФУ</string>
    <string name="subslogan_welcome">Созданный студентами 2-ого курса</string>
    <string name="register_btn_welcome">Зарегистрироваться</string>
    <string name="login_btn_welcome">Уже есть аккаунт?</string>


    <string name="label_registration">Регистрация</string>
    <string name="login_hint_registration">Логин</string>
    <string name="name_hint_registration">Имя или никнейм</string>
    <string name="password_hint_registration">Пароль</string>
    <string name="repeat_password_hint_registration">Повторите пароль</string>
    <string name="sex_hint_registration">Пол</string>
    <string name="continue_btn_registration">Продолжить</string>
    <string name="policy_text_registration">
        Нажимая на кнопку, вы соглашаетесь с <a href="http://example.com">политикой конфиденциальности</a>
        и обработки персональных данных, а также принимаете <a href="http://example.com">пользовательское соглашение</a>
    </string>

    <string name="sex_male">Мужской</string>
    <string name="sex_female">Женский</string>
    <string name="sexAnother">Другое</string>


    <string name="label_login">Вход</string>
    <string name="login_hint_log">Логин</string>
    <string name="password_hint_log">Пароль</string>
    <string name="continue_btn_log">Продолжить</string>

    <string name="menu_activity_tracker">Активность</string>
    <string name="menu_profile_tracker">Профиль</string>

    <string name="menu_details_remove">Удалить</string>
    <string name="menu_details_share">Поделиться</string>
    <string name="user_profile_save">Сохранить</string>

    <string name="welcome_text">Время потренить</string>
    <string name="welcome_sub_text">Нажимай на кнопку ниже и начинаем трекать активность</string>

    <string name="start_label_myactivity">Старт</string>
    <string name="finish_label_myactivity">Финиш</string>
    <string name="comment_hint_myactivity">Комментарий</string>

    <string name="pager_my_tab">Мои</string>
    <string name="pager_users_tab">Пользователей</string>

    <string name="login_hint_profile">Логин</string>
    <string name="nickname_hint_profile">Имя или никнейм</string>
    <string name="change_password_profile">Изменить пароль</string>
    <string name="exit_btn_profile">Выйти</string>

    <string name="old_password_change_hint">Старый пароль</string>
    <string name="new_password_change_hint">Новый пароль</string>
    <string name="repeat_password_change_hint">Повторите пароль</string>
    <string name="apply_change_hint">Принять</string>

    <string name="title_start">Погнали? :)</string>
    <string name="activity_start">Начать</string>

    <string name="acitvity_name_progress">Велосипед</string>
    <string name="acitvity_distance_progress">0.0 м</string>
    <string name="acitvity_time_progress">00:01:46</string>

</resources>