<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/user_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/UserToolbarTheme"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:menu="@menu/user_profile_toolbar_items"
        app:title="Профиль" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_profile_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile_toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_profile_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_hint_profile" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nickname_profile_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_profile_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nickname_profile_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nickname_hint_profile" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/change_password_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:paddingStart="16dp"
        android:paddingVertical="12dp"

        android:text="@string/change_password_profile"
        android:textAlignment="textStart"
        style="@style/Widget.MaterialComponents.Button.TextButton"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nickname_profile_input" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exit_profile_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"

        android:text="@string/exit_btn_profile"
        app:backgroundTint="#B00020"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>